[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/enemy/enemy.gd" type="Script" id=1]
[ext_resource path="res://Resources/Sprites/sandwich_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Resources/SFX/_hit.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]

resource_name = "idle"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 2 ]
}

[sub_resource type="RectangleShape2D" id=2]

resource_local_to_scene = true
custom_solver_bias = 0.0
extents = Vector2( 10, 10 )
_sections_unfolded = [ "Resource" ]

[sub_resource type="RectangleShape2D" id=3]

resource_local_to_scene = true
custom_solver_bias = 0.0
extents = Vector2( 13, 13 )
_sections_unfolded = [ "Resource" ]

[node name="enemy" type="KinematicBody2D" index="0"]

z_index = 5
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="animation_player" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = "idle"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/idle = SubResource( 1 )
blend_times = [  ]

[node name="twn_end" type="Tween" parent="." index="1"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="sprite" type="Sprite" parent="." index="2"]

position = Vector2( 0, -8 )
texture = ExtResource( 2 )
hframes = 3
_sections_unfolded = [ "Animation", "Offset", "Transform", "Visibility" ]

[node name="collision_shape_2d" type="CollisionShape2D" parent="." index="3"]

position = Vector2( 0, -5 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="area_2d" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="collision_shape_2d" type="CollisionShape2D" parent="area_2d" index="0"]

position = Vector2( 0, -5 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="snd_hit" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 3 )
volume_db = -10.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="tween_completed" from="twn_end" to="." method="_on_twn_end_tween_completed"]

[connection signal="body_entered" from="area_2d" to="." method="_on_area_2d_body_entered"]


